--- a/src/theme/common.css
+++ b/src/theme/common.css
@@ -58,7 +58,7 @@ html.ios {
 }
 
 .commonStyleIcon {
-    color: var(--ion-color-medium);
+    color: #fc5a5f;
     font-size: 22px;
 }
 
@@ -159,7 +159,22 @@ html.ios {
     max-height:35%;
     overflow-y:auto;
 }
-
+.productListContainer {
+    margin: 0px 20px;
+    background: #fff;
+    padding: 10px 10px;
+    height:100%;
+    max-height:58%;
+    overflow-y:auto;
+}
+.productAssignContainer {
+    margin: 0px 20px;
+    background: #fff;
+    padding: 10px 10px;
+    height:100%;
+    max-height:58%;
+    overflow-y:auto;
+}
 .remember {
     display: flex;
     align-items: center;
@@ -278,9 +293,11 @@ a {
     align-items: center;
     justify-content: center;
 }
-
+.redCircleApproval {
+    background: rgb(235 154 156 / 70%) !important;
+}
 .redCircle {
-    background: rgb(235 154 156 / 70%);
+    background: var(--ion-color-primary);
     border-radius: 50%;
     font-size: 9px;
     padding: 5px;
@@ -339,6 +356,7 @@ outline: none;
     border: 1px solid rgb(171 174 188 / 50%);
     border-radius: 4px;
     padding: 12px;
+    margin-bottom: 10px;
 }
 
 .ion-border-top {
@@ -414,6 +432,30 @@ ion-card-subtitle {
     width:100%
 }
 .search-field input:focus{
+    outline:none;
+}
+.aqty-field{
+    display: flex;
+    align-items: center;
+    background: #fff !important;
+    height: 30px !important;
+    border: 1px solid rgb(171 174 188 / 50%);
+    margin: 5px 0 !important;
+    border-radius: 5px;
+    --box-shadow: none;
+    --color: #000;
+    width:30%;
+    padding:5px 15px;
+}
+.aqty-field input{
+    background:#fff;
+    color:#000;
+    border:none;
+    box-shadow:none;
+    padding:0 5px;
+    width:100%
+}
+.aqty-field input:focus{
     outline:none;
 }
 .searchbar-search-icon.sc-ion-searchbar-ios {
@@ -528,4 +570,11 @@ input:focus, textarea:focus{
     color: #fff;
     font-weight: bold;
     margin-top: 2px;
+}
+
+/*Bg color overwrie*/
+ion-accordion .list-md {
+    background: transparent;
+    padding-top:0px;
+    padding-bottom:0px;
 }
