--- a/src/theme/common.css
+++ b/src/theme/common.css
@@ -37,7 +37,8 @@ html.ios {
 
 .outerPadding {
     margin: 30px 21px;
-    height: calc(80% - 10px);
+    height: calc(80% - 0px);
+    overflow-y: auto;
 }
 
 .custom-border {
@@ -72,7 +73,7 @@ html.ios {
 }
 
 .title {
-    line-height: 0.8;
+    line-height: 1;
 }
 
 .credentials {
@@ -155,7 +156,7 @@ html.ios {
     margin: 0px 20px;
     background: #fff;
     padding: 10px 10px;
-    height:100%;
+    /*height:100%;*/
     max-height:35%;
     overflow-y:auto;
 }
@@ -166,6 +167,7 @@ html.ios {
     height:100%;
     max-height:58%;
     overflow-y:auto;
+    border-radius:12px
 }
 .productAssignContainer {
     margin: 0px 20px;
@@ -174,6 +176,7 @@ html.ios {
     height:100%;
     max-height:58%;
     overflow-y:auto;
+    border-radius:12px
 }
 .remember {
     display: flex;
@@ -314,9 +317,10 @@ a {
     border: 1px solid var(--ion-color-primary);
     border-radius: 8px;
     width: 100%;
-    font-size: 11px;
-    padding: 13px;
+    font-size: 14px;
+    padding: 14px;
     font-family: 'Spartan-medium';
+    font-weight: 500;
 }
 .deliveryDate input{
     background: #fff;
@@ -340,7 +344,9 @@ outline: none;
     padding-top: 5px;
     padding-bottom: 5px;
 }
-
+.pt-10{
+    padding-top:10px;
+}
 .customPadding {
     padding: 8px;
 }
@@ -354,7 +360,7 @@ outline: none;
 
 .ion-border {
     border: 1px solid rgb(171 174 188 / 50%);
-    border-radius: 4px;
+    border-radius: 6px;
     padding: 12px;
     margin-bottom: 10px;
 }
@@ -435,25 +441,18 @@ ion-card-subtitle {
     outline:none;
 }
 .aqty-field{
-    display: flex;
-    align-items: center;
-    background: #fff !important;
-    height: 30px !important;
     border: 1px solid rgb(171 174 188 / 50%);
-    margin: 5px 0 !important;
     border-radius: 5px;
-    --box-shadow: none;
     --color: #000;
-    width:30%;
-    padding:5px 15px;
+    padding: 5px 5px;
+    font-size: 14px;
 }
 .aqty-field input{
-    background:#fff;
-    color:#000;
-    border:none;
-    box-shadow:none;
-    padding:0 5px;
-    width:100%
+    border: none;
+    box-shadow: none;
+    padding: 0;
+    width: 100%;
+    text-align: center;
 }
 .aqty-field input:focus{
     outline:none;
@@ -563,10 +562,10 @@ input:focus, textarea:focus{
     justify-content: center;
 }
 .inner-container img{
-    width: 14%;
+    width: 11%;
 }
 .inner-container p{
-    font-size: 15px;
+    font-size: 11px;
     color: #fff;
     font-weight: bold;
     margin-top: 2px;
@@ -577,4 +576,26 @@ ion-accordion .list-md {
     background: transparent;
     padding-top:0px;
     padding-bottom:0px;
+}
+
+.custom-ion-padding {
+padding: 20px 16px;
+}
+/* Eye hide and show */
+.eyeIconHideShow {
+    color: #fc5a5f;
+    font-size: 16px;
+    font-style: normal;
+}
+.inputOverwrite {
+    background: none;
+    box-shadow: none;
+    border: none;
+    padding: 10px 15px;
+    width: 100%;
+    font-size:14px
+}
+
+.inputOverwrite:focus-visible {
+    outline: none
 }
